refactor(database): move database driver from sqlx to gorm (#2)
* refactor: rename sqlx(DB) to OldDB

* refactor: use gorm.DB for use sessions

* refactor: move auth.go and profile.go

* refactor: move database to gorm

* chore(deps): remove sqlx
